# participation-gaps

./: LICENSE  README.md  citation.cff  fide-based-chess-analysis.ipynb  paper-draft.md  pyproject.toml
supplementary/: 2020-chess-statistics.ipynb
